--- a/garden-shop/dev/components/line-form/line-form.scss
+++ b/garden-shop/dev/components/line-form/line-form.scss
@@ -20,7 +20,7 @@
         position: relative;
         overflow: hidden;
         z-index: 1;
-        background-image: url(../../images/Pattern_Монтажная\ область\ 1\ копия\ 2.svg);
+        background-image: url(../images/Pattern_Монтажная\ область\ 1\ копия\ 2.svg);
         background-size: 223px 130px;
         background-repeat: no-repeat;
         background-position: right bottom;
@@ -82,7 +82,7 @@
             position: absolute;
             right: 10px;
             top: 10px;
-            mask-image: url(../../images/icons/leaf.svg);
+            mask-image: url(../images/icons/leaf.svg);
             mask-repeat: no-repeat;
             mask-size: contain;
             mask-position: center;
