--- a/garden-shop/dev/style/scss/main.scss
+++ b/garden-shop/dev/style/scss/main.scss
@@ -128,7 +128,7 @@ body {
 	&__submit {
 		width: 24px;
 		height: 24px;
-		background-image: url(../../images/icons/Chevron_Right.svg);
+		background-image: url(../images/icons/Chevron_Right.svg);
 		background-repeat: no-repeat;
 		background-size: contain;
 		background-position: center;
@@ -336,7 +336,7 @@ body {
 	height: 30px;
 	border-radius: 5px;
 	overflow: hidden;
-	background-image: url(../../images/icons/slider-arrow.svg);
+	background-image: url(../images/icons/slider-arrow.svg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: contain;
@@ -372,14 +372,14 @@ body {
 }
 
 .rating-stars {
-	background-image: url(../../images/icons/rating-empty.svg);
+	background-image: url(../images/icons/rating-empty.svg);
 	background-repeat: no-repeat;
 	background-position: center;
 	width: 96px;
 	height: 16px;
 	position: relative;
 	&__current {
-		background-image: url(../../images/icons/rating-full.svg);
+		background-image: url(../images/icons/rating-full.svg);
 		background-repeat: no-repeat;
 		background-position: center left;
 		position: absolute;
@@ -483,7 +483,7 @@ body {
 		right: 30px;
 		top: 30px;
 		cursor: pointer;
-		background-image: url(../../images/icons/Close_MD.svg);
+		background-image: url(../images/icons/Close_MD.svg);
 		background-position: center;
 		background-size: contain;
 		background-repeat: no-repeat;
