--- a/garden-shop/release/components/header/header.html
+++ b/garden-shop/release/components/header/header.html
@@ -19,7 +19,7 @@
 	<script src="https://unpkg.com/imask"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-	<script src="../../js/main-result.js"></script>
+	<script src="./js/main-result.js"></script>
 
 	<title>@@title</title>
 </head>
@@ -29,12 +29,12 @@
 		<header class="header">
 			<div class="header__line">
 				<div class="header__line-logo">
-					<img src="../../images/header-line-logo.svg" alt="logo">
+					<img src="./images/header-line-logo.svg" alt="logo">
 				</div>
 				<div class="header__line-discount">-10%</div>
 				<div class="header__line-text">Минитрактор Shifeng SF-240В</div>
 				<div class="header__line-img">
-					<img src="../../images/header-line-img.png" alt="img">
+					<img src="./images/header-line-img.png" alt="img">
 				</div>
 			</div>
 			<div class="container">
@@ -135,7 +135,7 @@
 					</div>
 					<div class="header__mid">
 						<a href="/" class="header__logo">
-							<img src="../../images/Logo.svg" alt="logo">
+							<img src="./images/Logo.svg" alt="logo">
 						</a>
 						<div class="header__body">
 							<div class="header__search search">
@@ -256,40 +256,188 @@
 		<menu class="menu">
 			<div class="menu__list caption-small">
 				<a href="" class="menu__item">
-					<div class="menu__item-icon menu__item-icon_notification">
-						<img src="../../images/icons/menu-icon-1.svg" alt="icon">
+					<div class="menu__icon menu__icon_notification">
+						<svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M17.2559 17.2554L8.7452 8.74461L0.259906 17.2299L8.77065 25.7406L17.2559 17.2554Z"
+								fill="#124144" />
+							<path
+								d="M3.12373 17.2341C4.61586 15.742 6.64133 14.9054 8.75468 14.9084C10.868 14.9113 12.8962 15.7535 14.3931 17.2498C12.901 18.742 10.8755 19.5786 8.76214 19.5756C6.6488 19.5727 4.62064 18.7304 3.12373 17.2341Z"
+								fill="white" />
+							<path d="M25.7412 8.77008L17.2305 0.259338L8.7452 8.74461L17.2559 17.2554L25.7412 8.77008Z"
+								fill="#E25B26" />
+							<path
+								d="M19.7742 6.22637L19.773 6.22523C18.3716 4.82385 16.103 4.82045 14.7058 6.21764L14.7046 6.21878C13.3074 7.61597 13.3108 9.88467 14.7122 11.286L14.7134 11.2872C16.1147 12.6886 18.3834 12.692 19.7806 11.2948L19.7818 11.2936C21.179 9.89645 21.1756 7.62776 19.7742 6.22637Z"
+								fill="white" />
+						</svg>
+
 						<span></span>
 					</div>
 					<div class="menu__item-text">Главная</div>
 				</a>
 				<a href="" class="menu__item menu__item_notification">
-					<div class="menu__item-icon">
-						<img src="../../images/icons/menu-icon-2.svg" alt="icon">
+					<div class="menu__icon">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M11 19C15.4183 19 19 15.4183 19 11C19 6.58172 15.4183 3 11 3C6.58172 3 3 6.58172 3 11C3 15.4183 6.58172 19 11 19Z"
+								stroke="#124144" stroke-linecap="round" stroke-linejoin="round" />
+							<path d="M21 21L17 17" stroke="#124144" stroke-linecap="round" stroke-linejoin="round" />
+						</svg>
 						<span>8</span>
 					</div>
 					<div class="menu__item-text">Каталог</div>
 				</a>
 				<a href="" class="menu__item">
-					<div class="menu__item-icon">
-						<img src="../../images/icons/menu-icon-3.svg" alt="icon">
+					<div class="menu__icon">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M3 3H3.26835C3.74213 3 3.97922 3 4.17246 3.08548C4.34283 3.16084 4.48871 3.2823 4.59375 3.43616C4.71289 3.61066 4.75578 3.84366 4.8418 4.30957L7.00004 16L17.4195 16C17.8739 16 18.1016 16 18.2896 15.9198C18.4554 15.8491 18.5989 15.7348 18.7051 15.5891C18.8255 15.424 18.8763 15.2025 18.9785 14.7597L20.5477 7.95972C20.7022 7.29025 20.7796 6.95561 20.6946 6.69263C20.6201 6.46207 20.4639 6.26634 20.256 6.14192C20.0189 6 19.6758 6 18.9887 6H5.5M18 21C17.4477 21 17 20.5523 17 20C17 19.4477 17.4477 19 18 19C18.5523 19 19 19.4477 19 20C19 20.5523 18.5523 21 18 21ZM8 21C7.44772 21 7 20.5523 7 20C7 19.4477 7.44772 19 8 19C8.55228 19 9 19.4477 9 20C9 20.5523 8.55228 21 8 21Z"
+								stroke="#124144" stroke-linecap="round" stroke-linejoin="round" />
+						</svg>
 						<span></span>
 					</div>
 					<div class="menu__item-text">Корзина</div>
 				</a>
 				<a href="" class="menu__item">
-					<div class="menu__item-icon">
-						<img src="../../images/icons/menu-icon-4.svg" alt="icon">
+					<div class="menu__icon">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<ellipse cx="12" cy="7" rx="4" ry="4" stroke="#124144" />
+							<path
+								d="M14.9989 14H8.99893C6.23751 14 3.76402 16.5498 5.58141 18.6289C6.81732 20.0428 8.86114 21 11.9989 21C15.1367 21 17.1805 20.0428 18.4165 18.6289C20.2338 16.5498 17.7604 14 14.9989 14Z"
+								stroke="#124144" />
+						</svg>
 						<span></span>
 					</div>
 					<div class="menu__item-text">Профиль</div>
 				</a>
 				<div class="menu__item menu__btn">
-					<div class="menu__item-icon">
-						<img src="../../images/icons/menu-icon-btn.svg" alt="icon">
+					<div class="menu__icon">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M3 17H21M3 12H21M3 7H21" stroke="#124144" stroke-linecap="round"
+								stroke-linejoin="round" />
+						</svg>
 						<span></span>
 					</div>
 					<div class="menu__item-text">Меню</div>
 				</div>
+			</div>
+			<div class="menu__nav">
+				<div class="menu__nav-top">
+					<a href="" class="menu__nav-logo">
+						<img src="./images/Logo.svg" alt="logo">
+					</a>
+					<div class="menu__nav-close menu__btn">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M18 18L6 6M18 6L6 18" stroke="#124144" stroke-width="1.5" stroke-linecap="round"
+								stroke-linejoin="round" />
+						</svg>
+					</div>
+				</div>
+				<ul class="menu__nav-list">
+					<li class="menu__nav-item">
+						<a href="" class="menu__nav-link">
+							<div class="menu__icon menu__icon_notification">
+								<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<ellipse cx="12" cy="7" rx="4" ry="4" stroke="#303030" />
+									<path
+										d="M14.9989 14H8.99893C6.23751 14 3.76402 16.5498 5.58141 18.6289C6.81732 20.0428 8.86114 21 11.9989 21C15.1367 21 17.1805 20.0428 18.4165 18.6289C20.2338 16.5498 17.7604 14 14.9989 14Z"
+										stroke="#303030" />
+								</svg>
+								<span>3</span>
+							</div>
+							<div class="menu__nav-link-text">Личный кабинет</div>
+						</a>
+					</li>
+					<li class="menu__nav-item">
+						<a href="" class="menu__nav-link">
+							<div class="menu__icon">
+								<svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M14.5714 21.5H15.0714V21V5C15.0714 4.17157 14.3999 3.5 13.5714 3.5H10.4286C9.60014 3.5 8.92857 4.17157 8.92857 5V21V21.5H9.42857H14.5714ZM8.64286 11.8462V11.3462H8.14286H4C3.17157 11.3462 2.5 12.0177 2.5 12.8462V20C2.5 20.8284 3.17157 21.5 4 21.5H8.14286H8.64286V21V11.8462ZM15.8571 7.42308H15.3571V7.92308V21V21.5H15.8571H20C20.8284 21.5 21.5 20.8284 21.5 20V8.92308C21.5 8.09465 20.8284 7.42308 20 7.42308H15.8571Z"
+										stroke="#303030" />
+								</svg>
+								<span></span>
+							</div>
+							<div class="menu__nav-link-text">Сравнение</div>
+						</a>
+					</li>
+					<li class="menu__nav-item">
+						<a href="" class="menu__nav-link">
+							<div class="menu__icon">
+								<svg width="20" height="21" viewBox="0 0 20 21" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M1.9458 9.11397C1.68476 8.87256 1.82656 8.43615 2.17964 8.39429L7.18262 7.80112C7.32652 7.78406 7.45151 7.69339 7.51221 7.5618L9.6224 2.98692C9.77132 2.66406 10.2303 2.66401 10.3792 2.98688L12.4894 7.56187C12.5501 7.69346 12.6743 7.78407 12.8182 7.80113L17.8215 8.39429C18.1745 8.43615 18.3162 8.87259 18.0552 9.11399L14.3566 12.5346C14.2502 12.633 14.2027 12.7796 14.231 12.9218L15.2126 17.8633C15.2819 18.212 14.9108 18.4817 14.6005 18.308L10.2044 15.8473C10.078 15.7765 9.92392 15.7764 9.79747 15.8472L5.40091 18.3081C5.09065 18.4817 4.71912 18.2121 4.78841 17.8633L5.77031 12.9217C5.79855 12.7796 5.75111 12.633 5.64472 12.5347L1.9458 9.11397Z"
+										stroke="#303030" stroke-width="1" stroke-linecap="round"
+										stroke-linejoin="round" />
+								</svg>
+								<span></span>
+							</div>
+							<div class="menu__nav-link-text">Программа лояльности</div>
+						</a>
+					</li>
+					<li class="menu__nav-item">
+						<a href="" class="menu__nav-link">
+							<div class="menu__icon">
+								<svg width="20" height="21" viewBox="0 0 20 21" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M1.66602 17.1667H18.3327M9.99935 17.1667H16.666V12.4734C16.666 12.0356 16.666 11.8167 16.6135 11.6125C16.567 11.4315 16.4903 11.2597 16.3868 11.1041C16.2699 10.9286 16.1073 10.7822 15.7816 10.4896L13.8649 8.76772C13.2349 8.20173 12.9198 7.91875 12.5636 7.8114C12.2499 7.71684 11.9153 7.71684 11.6016 7.8114C11.2455 7.91875 10.9305 8.20173 10.3005 8.76772L9.99935 9.0383M9.99935 17.1667V6.49996C9.99935 5.56654 9.99953 5.09989 9.81787 4.74337C9.65808 4.42976 9.40277 4.17478 9.08917 4.01499C8.73265 3.83333 8.26627 3.83333 7.33285 3.83333H5.99951C5.06609 3.83333 4.59903 3.83333 4.24251 4.01499C3.92891 4.17478 3.67413 4.42976 3.51434 4.74337C3.33268 5.09989 3.33268 5.56654 3.33268 6.49996V17.1667H9.99935Z"
+										stroke="#303030" stroke-width="1" stroke-linecap="round"
+										stroke-linejoin="round" />
+								</svg>
+								<span></span>
+							</div>
+							<div class="menu__nav-link-text">Филиалы</div>
+						</a>
+					</li>
+					<li class="menu__nav-item">
+						<a href="" class="menu__nav-link">
+							<div class="menu__icon">
+								<svg width="20" height="21" viewBox="0 0 20 21" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M10 6.33333V10.5H14.1667M10 18C5.85786 18 2.5 14.6421 2.5 10.5C2.5 6.35786 5.85786 3 10 3C14.1421 3 17.5 6.35786 17.5 10.5C17.5 14.6421 14.1421 18 10 18Z"
+										stroke="#303030" stroke-width="1" stroke-linecap="round"
+										stroke-linejoin="round" />
+								</svg>
+								<span></span>
+							</div>
+							<div class="menu__nav-link-text">Статус заказа</div>
+						</a>
+					</li>
+					<li class="menu__nav-item">
+						<a href="" class="menu__nav-link">
+							<div class="menu__icon">
+								<svg width="20" height="21" viewBox="0 0 20 21" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M10 8.66671V17.1667M10 8.66671C10 7.26658 10 6.5665 10.2725 6.03172C10.5122 5.56131 10.8947 5.17884 11.3652 4.93915C11.8999 4.66667 12.5997 4.66667 13.9998 4.66667H16.1665C16.6332 4.66667 16.8667 4.66667 17.0449 4.7575C17.2017 4.83739 17.3294 4.96488 17.4093 5.12169C17.5001 5.29994 17.5 5.53327 17.5 5.99998V13.3333C17.5 13.8 17.5001 14.0334 17.4093 14.2117C17.3294 14.3685 17.2017 14.4959 17.0449 14.5758C16.8667 14.6667 16.6333 14.6667 16.1666 14.6667H13.8074C13.0247 14.6667 12.6335 14.6667 12.2782 14.7745C11.9638 14.87 11.6713 15.0266 11.4174 15.2353C11.1306 15.471 10.9134 15.7967 10.4792 16.4479L10 17.1667M10 8.66671C10 7.26658 9.99986 6.5665 9.72738 6.03172C9.48769 5.56131 9.10554 5.17884 8.63514 4.93915C8.10036 4.66667 7.40021 4.66667 6.00008 4.66667H3.83341C3.3667 4.66667 3.13318 4.66667 2.95492 4.7575C2.79811 4.83739 2.67072 4.96488 2.59083 5.12169C2.5 5.29994 2.5 5.53327 2.5 5.99998V13.3333C2.5 13.8 2.5 14.0334 2.59083 14.2117C2.67072 14.3685 2.79811 14.4959 2.95492 14.5758C3.13318 14.6667 3.3667 14.6667 3.83341 14.6667H6.19268C6.97536 14.6667 7.36664 14.6667 7.72186 14.7745C8.03634 14.87 8.32886 15.0266 8.58276 15.2353C8.86956 15.471 9.08652 15.7967 9.52067 16.4479L10 17.1667"
+										stroke="#303030" stroke-width="1" stroke-linecap="round"
+										stroke-linejoin="round" />
+								</svg>
+								<span></span>
+							</div>
+							<div class="menu__nav-link-text">Новости</div>
+						</a>
+					</li>
+					<li class="menu__nav-item">
+						<a href="" class="menu__nav-link">
+							<div class="menu__icon">
+								<svg width="20" height="21" viewBox="0 0 20 21" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M13.3333 7.16667C13.3333 5.32572 11.8409 3.83333 10 3.83333C8.15905 3.83333 6.66667 5.32572 6.66667 7.16667M17.5 9.83329V14.5C17.5 15.4334 17.5002 15.9002 17.3185 16.2567C17.1587 16.5703 16.9034 16.8252 16.5898 16.985C16.2333 17.1666 15.7669 17.1667 14.8335 17.1667H5.16683C4.23341 17.1667 3.76635 17.1666 3.40983 16.985C3.09623 16.8252 2.84144 16.5703 2.68166 16.2567C2.5 15.9002 2.5 15.4334 2.5 14.5V9.83329C2.5 8.89987 2.5 8.43322 2.68166 8.0767C2.84144 7.7631 3.09623 7.50811 3.40983 7.34832C3.76635 7.16667 4.23341 7.16667 5.16683 7.16667H14.8335C15.7669 7.16667 16.2333 7.16667 16.5898 7.34832C16.9034 7.50811 17.1587 7.7631 17.3185 8.0767C17.5002 8.43322 17.5 8.89987 17.5 9.83329Z"
+										stroke="#303030" stroke-width="1" stroke-linecap="round"
+										stroke-linejoin="round" />
+								</svg>
+								<span></span>
+							</div>
+							<div class="menu__nav-link-text">Для бизнеса</div>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</menu>
 		<main class="main">
