--- a/garden-shop/release/components/home-slider/home-slider.css
+++ b/garden-shop/release/components/home-slider/home-slider.css
@@ -33,7 +33,7 @@
   position: absolute;
   top: -21px;
   left: 18px;
-  background-image: url(../../images/icons/leaf.svg);
+  background-image: url(../images/icons/leaf.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
