--- a/garden-shop/dev/components/article-item/article-item.html
+++ b/garden-shop/dev/components/article-item/article-item.html
@@ -1,6 +1,6 @@
 <div class="article-item">
     <div class="article-item__img">
-        <img src="../../images/article.jpg" alt="photo">
+        <img src="./images/article.jpg" alt="photo">
     </div>
     <a href="" class="article-item__text subtitle white-text">
         Название статьи, которое было бы круто уместить в 2-3
