--- a/garden-shop/dev/components/article-item/article-item.scss
+++ b/garden-shop/dev/components/article-item/article-item.scss
@@ -9,6 +9,11 @@
     padding: 30px;
     display: flex;
     flex-direction: column;
+    &:hover {
+        & .article-item__img {
+            transform: scale(1.1);
+        }
+    }
     &::after {
         position: absolute;
         left: 0;
@@ -27,8 +32,11 @@
         width: 100%;
         height: 100%;
         z-index: -2;
+        transition: all ease 0.5s;
         & img {
             object-fit: cover;
+            width: 100%;
+            height: 100%;
         }
     }
     &__text {
