--- a/garden-shop/dev/components/card/card.scss
+++ b/garden-shop/dev/components/card/card.scss
@@ -19,7 +19,7 @@
     }
     &__state {
         padding-right: 20px;
-        background-image: url(../../images/icons/state_true.svg);
+        background-image: url(../images/icons/state_true.svg);
         background-repeat: no-repeat;
         background-size: 15px;
         background-position: center right;
@@ -27,7 +27,7 @@
         line-height: 100%;
         &_false {
             color: #f93232;
-            background-image: url(../../images/icons/state_false.svg);
+            background-image: url(../images/icons/state_false.svg);
         }
     }
     &__img {
@@ -207,7 +207,7 @@
         background: #f7f8fb;
         border-radius: 50%;
         overflow: hidden;
-        background-image: url(../../images/icons/Shopping_Cart_02.svg);
+        background-image: url(../images/icons/Shopping_Cart_02.svg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: 24px;
