--- a/garden-shop/release/components/category/category.html
+++ b/garden-shop/release/components/category/category.html
@@ -6,31 +6,31 @@
                 <div class="category__slider-wrapper swiper-wrapper">
                     <a href="" class="category__slide swiper-slide">
                         <div class="category__img">
-                            <img src="../../images/category/cat-1.png" alt="category">
+                            <img src="./images/category/cat-1.png" alt="category">
                         </div>
                         <div class="category__name subtitle">Все сезонные категории</div>
                     </a>
                     <a href="" class="category__slide swiper-slide">
                         <div class="category__img">
-                            <img src="../../images/category/cat-2.png" alt="category">
+                            <img src="./images/category/cat-2.png" alt="category">
                         </div>
                         <div class="category__name subtitle">Все сезонные категории</div>
                     </a>
                     <a href="" class="category__slide swiper-slide">
                         <div class="category__img">
-                            <img src="../../images/category/cat-3.png" alt="category">
+                            <img src="./images/category/cat-3.png" alt="category">
                         </div>
                         <div class="category__name subtitle">Все сезонные категории</div>
                     </a>
                     <a href="" class="category__slide swiper-slide">
                         <div class="category__img">
-                            <img src="../../images/category/cat-4.png" alt="category">
+                            <img src="./images/category/cat-4.png" alt="category">
                         </div>
                         <div class="category__name subtitle">Все сезонные категории</div>
                     </a>
                     <a href="" class="category__slide swiper-slide">
                         <div class="category__img">
-                            <img src="../../images/category/cat-1.png" alt="category">
+                            <img src="./images/category/cat-1.png" alt="category">
                         </div>
                         <div class="category__name subtitle">Все сезонные категории</div>
                     </a>
