--- a/garden-shop/release/components/default-slider/default-slider.html
+++ b/garden-shop/release/components/default-slider/default-slider.html
@@ -322,7 +322,7 @@
                                 <div class="card__kit-list-wrapper">
                                     <div class="card__kit-item">
                                         <a href="" class="card__kit-item-img">
-                                            <img src="../../images/kit.png" alt="img">
+                                            <img src="./images/kit.png" alt="img">
                                         </a>
                                         <div class="card__kit-item-text">
                                             <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
@@ -333,7 +333,7 @@
                                     </div>
                                     <div class="card__kit-item">
                                         <a href="" class="card__kit-item-img">
-                                            <img src="../../images/kit.png" alt="img">
+                                            <img src="./images/kit.png" alt="img">
                                         </a>
                                         <div class="card__kit-item-text">
                                             <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
@@ -344,7 +344,7 @@
                                     </div>
                                     <div class="card__kit-item">
                                         <a href="" class="card__kit-item-img">
-                                            <img src="../../images/kit.png" alt="img">
+                                            <img src="./images/kit.png" alt="img">
                                         </a>
                                         <div class="card__kit-item-text">
                                             <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
@@ -355,7 +355,7 @@
                                     </div>
                                     <div class="card__kit-item">
                                         <a href="" class="card__kit-item-img">
-                                            <img src="../../images/kit.png" alt="img">
+                                            <img src="./images/kit.png" alt="img">
                                         </a>
                                         <div class="card__kit-item-text">
                                             <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
@@ -366,7 +366,7 @@
                                     </div>
                                     <div class="card__kit-item">
                                         <a href="" class="card__kit-item-img">
-                                            <img src="../../images/kit.png" alt="img">
+                                            <img src="./images/kit.png" alt="img">
                                         </a>
                                         <div class="card__kit-item-text">
                                             <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
