--- a/garden-shop/release/components/footer/footer.css
+++ b/garden-shop/release/components/footer/footer.css
@@ -161,12 +161,17 @@
     display: flex;
     gap: 20px;
   }
+  .footer__nav-link {
+    display: inline-block;
+  }
   .footer__info-payment {
     min-width: 156px;
   }
   .footer__nav-list {
     max-height: none;
-    gap: 20px;
+    gap: 15px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
   .footer__subnav {
     gap: 5px;
@@ -174,6 +179,9 @@
     height: 0;
     overflow: hidden;
     transition: all ease 0.5s;
+  }
+  .footer__nav-item {
+    max-width: 100%;
   }
   .footer__nav-item_has-children .footer__nav-link_lvl1 {
     position: relative;
@@ -187,7 +195,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url(../../images/icons/Caret_Down_MD.svg);
+    background-image: url(../images/icons/Caret_Down_MD.svg);
     position: absolute;
     right: 0;
     top: 50%;
