--- a/garden-shop/release/components/footer/footer.html
+++ b/garden-shop/release/components/footer/footer.html
@@ -63,9 +63,9 @@
                     <div class="footer__info-item">
                         <div class="footer__info-title caption demibold">Мы принимаем к оплате</div>
                         <div class="footer__info-payment">
-                            <img src="../../images/mastercard.png" alt="">
-                            <img src="../../images/visa.png" alt="">
-                            <img src="../../images/mir.png" alt="">
+                            <img src="./images/mastercard.png" alt="">
+                            <img src="./images/visa.png" alt="">
+                            <img src="./images/mir.png" alt="">
                         </div>
                     </div>
                     <div class="footer__info-item">
