--- a/garden-shop/release/components/header/header.css
+++ b/garden-shop/release/components/header/header.css
@@ -65,7 +65,7 @@
   content: "";
   width: 15px;
   height: 15px;
-  background-image: url(../../images/icons/Map_Pin.svg);
+  background-image: url(../images/icons/Map_Pin.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -110,7 +110,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url(../../images/icons/personal\ account.svg);
+  background-image: url(../images/icons/personal\ account.svg);
 }
 .header__body-btn {
   display: flex;
@@ -214,10 +214,14 @@
   display: none;
   transition: all ease 0.5s;
 }
-.menu_open {
+.menu-open {
+  overflow: hidden;
+}
+.menu-open .menu {
+  pointer-events: all;
   background-color: rgba(18, 65, 68, 0.8);
 }
-.menu_open .menu__nav {
+.menu-open .menu__nav {
   transform: none;
 }
 .menu__list {
@@ -240,12 +244,12 @@
 .menu__item_notification .menu__item-icon span {
   display: flex;
 }
-.menu__item-icon {
+.menu__icon {
   position: relative;
   width: 24px;
   height: 24px;
 }
-.menu__item-icon span {
+.menu__icon span {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
@@ -265,19 +269,47 @@
   pointer-events: all;
   position: absolute;
   z-index: -1;
-  top: 15px;
-  left: 15px;
-  height: 100%;
-  width: calc(100% - 30px);
+  bottom: 0;
+  right: 15px;
   border-radius: 5px;
   padding: 15px;
   background-color: #fff;
   transition: all ease 0.5s;
   transform: translateY(100%);
+  height: auto;
+  width: fit-content;
+  min-width: 290px;
+  max-width: 570px;
+  padding-bottom: 66px;
+  max-height: calc(100% - 15px);
 }
 .menu__nav-logo {
   width: 104px;
   height: 33px;
+  display: block;
+}
+.menu__nav-top {
+  display: flex;
+  justify-content: space-between;
+}
+.menu__nav-close {
+  display: flex;
+  height: 100%;
+}
+.menu__nav-list {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  overflow-y: auto;
+  max-height: calc(100vh - 75px - 90px);
+  height: 100%;
+  padding-bottom: 20px;
+}
+.menu__nav-link {
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
 
 @media (max-width: 1150px) {
