--- a/garden-shop/release/components/partners/partners.html
+++ b/garden-shop/release/components/partners/partners.html
@@ -6,52 +6,52 @@
                 <div class="partners__slider-wrapper swiper-wrapper">
                     <div class="partners__slide swiper-slide">
                         <div class="partners__img">
-                            <img src="../../images/partners/partner-1.png" alt="logo">
+                            <img src="./images/partners/partner-1.png" alt="logo">
                         </div>
                     </div>
                     <div class="partners__slide swiper-slide">
                         <div class="partners__img">
-                            <img src="../../images/partners/partner-2.png" alt="logo">
+                            <img src="./images/partners/partner-2.png" alt="logo">
                         </div>
                     </div>
                     <div class="partners__slide swiper-slide">
                         <div class="partners__img">
-                            <img src="../../images/partners/partner-3.png" alt="logo">
+                            <img src="./images/partners/partner-3.png" alt="logo">
                         </div>
                     </div>
                     <div class="partners__slide swiper-slide">
                         <div class="partners__img">
-                            <img src="../../images/partners/partner-4.png" alt="logo">
+                            <img src="./images/partners/partner-4.png" alt="logo">
                         </div>
                     </div>
                     <div class="partners__slide swiper-slide">
                         <div class="partners__img">
-                            <img src="../../images/partners/partner-5.png" alt="logo">
+                            <img src="./images/partners/partner-5.png" alt="logo">
                         </div>
                     </div>
                     <div class="partners__slide swiper-slide">
                         <div class="partners__img">
-                            <img src="../../images/partners/partner-6.png" alt="logo">
+                            <img src="./images/partners/partner-6.png" alt="logo">
                         </div>
                     </div>
                     <div class="partners__slide swiper-slide">
                         <div class="partners__img">
-                            <img src="../../images/partners/partner-7.png" alt="logo">
+                            <img src="./images/partners/partner-7.png" alt="logo">
                         </div>
                     </div>
                     <div class="partners__slide swiper-slide">
                         <div class="partners__img">
-                            <img src="../../images/partners/partner-8.png" alt="logo">
+                            <img src="./images/partners/partner-8.png" alt="logo">
                         </div>
                     </div>
                     <div class="partners__slide swiper-slide">
                         <div class="partners__img">
-                            <img src="../../images/partners/partner-8.png" alt="logo">
+                            <img src="./images/partners/partner-8.png" alt="logo">
                         </div>
                     </div>
                     <div class="partners__slide swiper-slide">
                         <div class="partners__img">
-                            <img src="../../images/partners/partner-8.png" alt="logo">
+                            <img src="./images/partners/partner-8.png" alt="logo">
                         </div>
                     </div>
                 </div>
